--- a/slabvwc/core-summary.html
+++ b/slabvwc/core-summary.html
@@ -1,1 +1,39 @@
-<h1>Slabvwc core summary</h1>
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css\"
+      rel="stylesheet"
+    />
+    <title>핵심 요약</title>
+    <style>
+      body {
+        font-family: "Pretendard Variable", sans-serif;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.6;
+        background: #fafafa;
+        margin: 0;
+        padding: 1rem;
+        padding-bottom: 1.5rem;
+      }
+    </style>
+  </head>
+  <body>
+    <ol style="padding-left: 1rem">
+      <li style="margin-bottom: 1.25rem">
+        첫 급액 시 함수율은 배지 함수율의 일관성을 평가하는 중요한 지표입니다.
+      </li>
+      <li style="margin-bottom: 1.25rem">
+        매일 일정한 함수율을 유지하면, 작물이 스트레스 없이 안정적으로 생장할 수
+        있습니다.
+      </li>
+      <li>
+        흐림이나 맑음같은 환경 요인에 흔들리지 않고 일관성 있게 관리하는 것이
+        목표입니다.
+      </li>
+    </ol>
+  </body>
+</html>
