--- a/slabvwc/slabvwc.html
+++ b/slabvwc/slabvwc.html
@@ -1,1 +1,61 @@
-<h1>Slabvwc</h1>
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css\"
+      rel="stylesheet"
+    />
+    <title>첫 급액시 함수율</title>
+    <style>
+      body {
+        font-family: "Pretendard Variable", sans-serif;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.6;
+        background: #fafafa;
+        margin: 0;
+        padding: 0 1rem;
+        padding-bottom: 0.5rem;
+      }
+    </style>
+  </head>
+  <body>
+    <p>
+      첫 급액 시 함수율은 관수가 시작될 때의 배지 함수율을 의미합니다. 보통 하루
+      중 가장 낮은 함수율 값을 가리킵니다. 이 지표를 통해 함수율 변화를 모니터링
+      할 수 있습니다.
+    </p>
+    <img
+      src="../assets//slabvwc//slabvwc.png"
+      alt="첫 급액 시 함수율"
+      style="width: 100%"
+    />
+    <div
+      style="
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 0.5rem;
+      "
+    >
+      <div
+        style="
+          width: 0.75rem;
+          height: 0.75rem;
+          background: rgba(255, 126, 55, 0.32);
+          border: 0.063rem solid #ff7e37;
+          border-radius: 50%;
+        "
+      ></div>
+      <div style="font-size: 0.875rem; color: #666; padding-top: 0.125rem">
+        첫 급액 시 함수율
+      </div>
+    </div>
+    <p>
+      일정한 첫 급액 시 함수율을 유지하는 것은 작물의 수분 스트레스를 방지하고,
+      안정적인 생육을 유지하는데 중요합니다.
+    </p>
+  </body>
+</html>
