feat: add deviation and wc docs

--- a/slabvwc-deviation/core-summary.html
+++ b/slabvwc-deviation/core-summary.html
@@ -1,1 +1,37 @@
-<h1>Slabvwc deviation core-summary</h1>
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css\"
+      rel="stylesheet"
+    />
+    <title>핵심 요약</title>
+    <style>
+      body {
+        font-family: "Pretendard Variable", sans-serif;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.6;
+        background: #fafafa;
+        margin: 0;
+        padding: 1rem;
+        padding-bottom: 1.5rem;
+      }
+    </style>
+  </head>
+  <body>
+    <ol style="padding-left: 1rem">
+      <li style="margin-bottom: 1.25rem">
+        함수율 편차를 통해 작물의 생장 방향을 조절할 수 있습니다.
+      </li>
+      <li style="margin-bottom: 1.25rem">
+        5~10% 범위에서 함수율 편차를 관리하면 생장 균형을 맞출 수 있습니다.
+      </li>
+      <li>
+        과습(5% 미만) 또는 과건조(10% 초과)는 생장 불균형을 초래할 수 있습니다.
+      </li>
+    </ol>
+  </body>
+</html>
