--- a/slabvwc-deviation/slabvwc-deviation.html
+++ b/slabvwc-deviation/slabvwc-deviation.html
@@ -1,1 +1,50 @@
-<h1>Slabvwc deviation</h1>
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css\"
+      rel="stylesheet"
+    />
+    <title>함수율 편차</title>
+    <style>
+      body {
+        font-family: "Pretendard Variable", sans-serif;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.6;
+        background: #fafafa;
+        margin: 0;
+        padding: 1rem;
+        padding-bottom: 1.5rem;
+      }
+      ul {
+        margin-top: 0;
+        padding-left: 1rem;
+      }
+    </style>
+  </head>
+  <body>
+    <p>
+      함수율 편차란, 급액이 종료된 시점부터 다음날 첫 급액 전까지 배지의
+      함수율이 변하는 폭을 의미합니다.
+    </p>
+    <p>
+      이 기간동안 배지가 더 많이 건조될수록 함수율 편차는 커지고, 배지가
+      촉촉하게 유지될수록 함수율 편차는 작아집니다.
+    </p>
+    <p style="margin-bottom: 0">
+      함수율 편차의 크기는 작물 생장 방향에도 영향을 줍니다.
+    </p>
+    <ul>
+      <li>높은 함수율 편차 → 생식생장 (꽃, 열매 등 생식기관 발달 촉진)</li>
+      <li>낮은 함수율 편차 → 영양생장 (잎, 줄기 등 체세포 성장 촉진)</li>
+    </ul>
+    <img
+      src="../assets/slabvwc-deviation/deviation.png"
+      alt="함수율 편차"
+      style="width: 100%"
+    />
+  </body>
+</html>
