--- a/slabvwc-deviation/standard.html
+++ b/slabvwc-deviation/standard.html
@@ -1,1 +1,74 @@
-<h1>Slabvwc deviation standard</h1>
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css\"
+      rel="stylesheet"
+    />
+    <title>적정 WC 일출딥 범위</title>
+    <style>
+      body {
+        font-family: "Pretendard Variable", sans-serif;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.6;
+        background: #fafafa;
+        margin: 0;
+        padding: 1rem;
+      }
+      table {
+        width: 100%;
+        border-collapse: collapse;
+      }
+      td {
+        font-size: 0.875rem;
+        padding: 0.5rem 1rem;
+        border: 0.063rem solid #eee;
+      }
+      th {
+        padding: 0.5rem 1rem;
+        border: 0.063rem solid #eee;
+        font-weight: 400;
+        color: #999;
+        background: #f5f5f5;
+      }
+    </style>
+  </head>
+  <body>
+    <table>
+      <tr>
+        <th style="width: 20%">구분</th>
+        <th style="width: 25%">기준(%)</th>
+        <th style="text-align: start">의미</th>
+      </tr>
+      <tr>
+        <td style="width: 20%; background: #f5f5f5; text-align: center;">미달</td>
+        <td style="width: 25%; text-align: center">< 5</td>
+        <td style="text-align: start">배지가 과습하여 뿌리 생육이 저해될 수 있습니다.</td>
+      </tr>
+      <tr>
+        <td rowspan="3" style="width: 20%; background: #f5f5f5; text-align: center;">적정</th>
+        <td style="width: 25%; text-align: center">5 ~ 6.9</th>
+        <td style="text-align: start">영양생장을 촉진하는데 적절한 함수율 편차입니다.</td>
+      </tr>
+      <tr>
+        <td style="width: 25%; text-align: center">7 ~ 8.9</td>
+        <td style="text-align: start">작물의 밸런스를 유지하기에 좋은 함수율 편차입니다.</td>
+      </tr>
+      <tr>
+        <td style="width: 25%; text-align: center">9 ~ 10</td>
+        <td style="text-align: start">생식생장을 촉진하는데 적합한 함수율 편차입니다.</td>
+      </tr>
+      <tr>
+        <td style="width: 20%; background: #f5f5f5; text-align: center;">초과</td>
+        <td style="width: 25%; text-align: center">> 10</td>
+        <td style="text-align: start">배지가 과도하게 건조해져 작물의 생육이 저해될 수 있습니다.</td>
+      </tr>
+      <caption style="margin-top: 0.5rem; caption-side: bottom; text-align: start; color: #666; font-size: 0.75rem; align-content: center;">
+        * 함수율 편차 기준은 작목이나 재배 특성에 따라 달라질 수 있습니다.
+      </caption>
+    </table>
+  </body>
+</html>
