--- a/wc/root-hair.html
+++ b/wc/root-hair.html
@@ -1,1 +1,47 @@
-<h1>wc root-hair</h1>
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css\"
+      rel="stylesheet"
+    />
+    <title>뿌리털이란</title>
+    <style>
+      body {
+        font-family: "Pretendard Variable", sans-serif;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.6;
+        background: #fafafa;
+        margin: 0;
+        padding: 1rem;
+        padding-bottom: 1.5rem;
+      }
+      dt {
+        font-weight: 500;
+      }
+      dd {
+        font-size: 0.875rem;
+        margin: 0;
+        line-height: 1.3;
+      }
+    </style>
+  </head>
+  <body>
+    <img src="../assets/wc/root.png" alt="뿌리털" style="width: 100%" />
+    <dl>
+      <dt>Q. 뿌리털은 주로 언제 생성되나요?</dt>
+      <dd>
+        대부분의 뿌리털은 주로 일출 후, 급액이 시작되기 전 작물이 증산하면서
+        배지 함수율이 감소하는동안 생성됩니다.
+      </dd>
+      <dt style="margin-top: 1rem">Q. 뿌리털의 역할은 무엇인가요?</dt>
+      <dd>
+        뿌리털은 작물이 양분과 수분을 실제로 흡수하는 주요 기관입니다. 건강한
+        뿌리털이 많아야 작물이 잘 자랍니다.
+      </dd>
+    </dl>
+  </body>
+</html>
