--- a/wc/core-summary.html
+++ b/wc/core-summary.html
@@ -1,1 +1,35 @@
-<h1>wc core-summary</h1>
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css\"
+      rel="stylesheet"
+    />
+    <title>핵심 요약</title>
+    <style>
+      body {
+        font-family: "Pretendard Variable", sans-serif;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.6;
+        background: #fafafa;
+        margin: 0;
+        padding: 1rem;
+        padding-bottom: 1.5rem;
+      }
+    </style>
+  </head>
+  <body>
+    <ol style="padding-left: 1rem">
+      <li style="margin-bottom: 1.25rem">
+        WC 일출딥을 통해 뿌리털 생성 환경을 진단할 수 있습니다.
+      </li>
+      <li>
+        적절한 WC 일출딥(1~2%)은 건강한 뿌리를 유지하고, 너무 높거나 낮은 WC
+        일출딥은 생육 저해를 유발할 수 있습니다.
+      </li>
+    </ol>
+  </body>
+</html>
