--- a/wc/wc.html
+++ b/wc/wc.html
@@ -1,1 +1,36 @@
-<h1>wc</h1>
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css\"
+      rel="stylesheet"
+    />
+    <title>WC 일출딥</title>
+    <style>
+      body {
+        font-family: "Pretendard Variable", sans-serif;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.6;
+        background: #fafafa;
+        margin: 0;
+        padding: 0 1rem;
+        padding-bottom: 1.5rem;
+      }
+    </style>
+  </head>
+  <body>
+    <p>
+      WC(Water Content) 일출딥이란, 일출부터 첫 급액 시점까지 배지 함수율의
+      감소폭을 의미합니다.
+    </p>
+    <p>뿌리털 생성 환경을 진단하는데 활용할 수 있습니다.</p>
+    <img
+      src="../assets//wc/wc.png"
+      alt="첫 급액 시 함수율"
+      style="width: 100%"
+    />
+  </body>
+</html>
