--- a/wc/range.html
+++ b/wc/range.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css\"
       rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css"
     />
     <title>적정 WC 일출딥 범위</title>
     <style>
@@ -43,7 +45,13 @@
         <th style="text-align: start">의미</th>
       </tr>
       <tr>
-        <td style="width: 20%; background: #f5f5f5; text-align: center">
+        <td
+          style="
+            width: 20%;
+            background: rgba(255, 101, 101, 0.16);
+            text-align: center;
+          "
+        >
           미달
         </td>
         <td style="width: 25%; text-align: center">< 1</td>
@@ -53,7 +61,13 @@
         </td>
       </tr>
       <tr>
-        <td style="width: 20%; background: #f5f5f5; text-align: center">
+        <td
+          style="
+            width: 20%;
+            background: rgba(54, 123, 235, 0.16);
+            text-align: center;
+          "
+        >
           적정
         </td>
         <td style="width: 25%; text-align: center">1 ~ 2</td>
@@ -63,7 +77,13 @@
         </td>
       </tr>
       <tr>
-        <td style="width: 20%; background: #f5f5f5; text-align: center">
+        <td
+          style="
+            width: 20%;
+            background: rgba(255, 101, 101, 0.16);
+            text-align: center;
+          "
+        >
           초과
         </td>
         <td style="width: 25%; text-align: center">> 2</td>
@@ -73,5 +93,22 @@
         </td>
       </tr>
     </table>
+    <div
+      style="
+        display: flex;
+        gap: 0.25rem;
+        align-items: center;
+        margin-top: 1rem;
+        height: 1.5rem;
+      "
+    >
+      <img
+        src="../assets/Issue.svg"
+        style="width: 1rem; height: 1rem; vertical-align: middle"
+      />
+      <span style="color: #e9902b; font-size: 0.875rem"
+        >기준값은 작목이나 재배 특성에 따라 달라질 수 있습니다.</span
+      >
+    </div>
   </body>
 </html>
